create a separate folder for html files